--- a/css/layout.css
+++ b/css/layout.css
@@ -1,8 +1,16 @@
 div , section {
     box-sizing: border-box;
 }
+/* for mobile */
+@media only screen and (min-device-width: 480px)
 
-@media screen and (min-width:480px) and (max-width:767px){
+/* @media screen and (min-width:320px)  */
+/* and (max-width:767px) */
+{
+    main {
+        display: flex;
+        flex-direction: column;
+    }
     .div-a{
         width:480px;
         height:75px;
@@ -88,9 +96,9 @@ div , section {
                 }
             .div-b{
                     width:200px;
-                    height:606px;
+                    height:600px;
                     text-align: center;
-                    line-height: 606px;
+                    line-height: 600px;
                     float: left;        
                     }
                     .div-c{
@@ -148,4 +156,6 @@ div , section {
                 }
         
         }
-        
+        .bcdefghi{
+            flex-direction: column;
+        }
