--- a/css/theme.css
+++ b/css/theme.css
@@ -1,4 +1,7 @@
-@media screen and (min-width:480px) and (max-width:767px){
+/* for mobile */
+/* @media screen and (min-width:480px) and (max-width:767px){ */
+    @media only screen and (min-device-width: 480px)
+{
     .div-a{
         border: solid gray;
         background-color:  #ffe6f2;
@@ -44,8 +47,8 @@
         background-color:   #f2ffcc;
         }
 }
-/* @media screen and (min-width:768px) and (max-width:960px){ */
-    @media (min-width:768px){
+/* for iPad */
+@media (min-width:768px){
  
             .div-a{
                 border: solid gray;
